# mailtag

./: .dockerignore  .env.example  .gitignore  .yamllint  CHANGELOG.md  CLASSIFICATION_IMPROVEMENTS_SPEC.md  CLAUDE.md  Dockerfile  Makefile  README.md  TODO.md  config.docker.toml  config.toml  docker-compose.yml  mkdocs.yml  pyproject.toml  ruff.toml  suggestion.txt
.claude/: ralph-loop.local.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  docker.yml  docs.yml  greetings.yml  label.yml  release.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion.md
data/: classification_schema.yml  imap_folders.json  mailfilter.xml  non_commercial_domains.yaml
db/: sender_classification_db.json  validated_classification_db.json  validated_classification_db.json.old
docs/: DATA_MANAGEMENT.md  DESIGN_PRINCIPLES.md  ENHANCED_CLASSIFICATION_SPEC.md  FAST_PARSE_API.md  FAST_PARSE_BATCHING.md  FAST_PARSE_BODY_PROCESSING.md  FAST_PARSE_DEVELOPER_GUIDE.md  FAST_PARSE_HEADER_PROCESSING.md  FAST_PARSE_IMPLEMENTATION.md  FAST_PARSE_METRICS.md  FAST_PARSE_PERFORMANCE.md  FAST_PARSE_RETRY.md  FAST_PARSE_SPECIFICATION.md  FOLDER_BASED_CLASSIFICATION.md  IMAP_FOLDER_CLASSIFICATION_SPEC.md  IMPACT_ANALYSIS.md  IMPACT_ANALYSIS_FAST_PARSE.md  LAYOUT.md  MLX_MIGRATION_PLAN.md  PRD.md  SECURITY.md  TECHNICAL_SPECIFICATION.md  TODO.md  domain-based-classification.md
docs-site/: index.md
docs-site/adrs/: adr-001-mlx-migration.md  adr-002-gemma4-model-switch.md
docs-site/api/: classifier.md  database.md  mlx-provider.md  models.md  semantic-router.md
docs-site/architecture/: classification.md  design-principles.md  mlx-provider.md  three-pass.md
docs-site/getting-started/: configuration.md  installation.md  usage.md
old/: Dossiers.md  dossiers v2.md  mailfilter.xml  validated_classification_db.json.old
scripts/: CLAUDE.md  build_category_embeddings.py  build_domain_database.py  check_duplicates.py  cli.sh  inject_filters.py  run.sh  start.sh  streamlit.sh  test.sh  update_domain_db.py  webhook.sh
src/: app.py  main.py  streamlit_app.py  webhook.py
src/mailtag/: CLAUDE.md  classifier.py  config.py  database.py  filter_generator.py  folder_analyzer.py  gmail_auth.py  gmail_service.py  imap_service.py  logging_config.py  mail_service.py  metrics.py  mlx_provider.py  models.py  providers.py  retry.py  semantic_router.py
src/mailtag/api/: __init__.py  dependencies.py  middleware.py  schemas.py
src/mailtag/api/routes/: classify.py  health.py
src/mailtag/utils/: CLAUDE.md  data_cleanup.py  data_validation.py  db_backup.py  domain_analyzer.py  domain_utils.py  email_parsing.py  tasks.py  text_utils.py
tests/: CLAUDE.md  conftest.py  mock_gmail_service.py  mock_imap_client.py  test_ai_confidence.py  test_classification_metrics.py  test_classifier.py  test_config.py  test_data_cleanup.py  test_data_validation.py  test_database.py  test_db_backup.py  test_domain_analyzer.py  test_error_recovery.py  test_filter_generator.py  test_gmail_auth.py  test_gmail_service.py  test_imap_service.py  test_logging_config.py  test_mail_service.py  test_main.py  test_missing_google_deps.py  test_mlx_provider.py  test_retry_logic.py  test_semantic_router.py  test_text_utils.py  test_webhook_api.py
tests/integration/: test_full_classification_workflow.py
