[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mailtag"
version = "1.0.0"
description = "A tool to automatically classify and tag emails."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Frederic Jacquet", email = "fred.jacquet@gmail.com" },
]
dependencies = [
    "beautifulsoup4>=4.13.4",
    "streamlit>=1.46.1",
    "loguru>=0.7.2",
    "pytest-mock>=3.14.1",
    "pydantic==2.11.7",
    "google-api-python-client==2.179.0",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.2.2",
    "python-dotenv==1.1.1",
    "imapclient>=3.0.1",
    "click>=8.2.1",
    "fastapi>=0.115.14",
    "watchdog>=6.0.0",
    "psutil>=7.0.0",
    "PyYAML==6.0.2",
    "google>=3.0.0",
    "pydantic>=2.11.7",
    "dotenv>=0.9.9",
    # MLX dependencies (Apple Silicon optimized)
    "mlx>=0.18.0",
    "mlx-lm>=0.18.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "einops>=0.8.1",
    # Webhook API server
    "uvicorn[standard]>=0.34.0",
    # Cloud/Ollama AI fallback (used when MLX is unavailable, e.g. Docker)
    "litellm>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "ruff",
    "yamllint",
    "pytest-cov",
    "pytest-mock>=3.14.1",
    "faker",
    "pendulum",
    "yamlfix",
]

gmail = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "google>=3.0.0",
]

docs = [
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.29.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=mailtag --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = [".", "src"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 110
indent-width = 4

# Assume Python 3.13.
target-version = "py313"

[tool.ruff.lint]
# Enable a broader set of rules for more comprehensive checks.
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "B",  # flake8-bugbear
    "I",  # isort
    "UP", # pyupgrade
]
ignore = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true

# Relax strict mode for now - enable gradually
disallow_untyped_defs = false
disallow_any_generics = false
disallow_subclassing_any = false

# Ignore missing imports for third-party libraries
ignore_missing_imports = true

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "mypy>=1.19.1",
]
